vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__empty_generic_clause.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
generic();

== tree ==
GenericClause
  Keyword(Generic)
  LeftPar
  RightPar
  SemiColon

== diagnostics ==
1:9 Expected(Node([InterfaceList]))
