vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__interface_list_doubled_separator.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
port (clk : in std_logic;; rst : in std_logic);

== tree ==
PortClause
  Keyword(Port)
  LeftPar
  InterfaceList
    InterfaceObjectDeclaration
      IdentifierList
        Identifier 'clk'
      Colon
      Keyword(In)
      SubtypeIndication
        Name
          NameDesignatorPrefix
            Identifier 'std_logic'
    SemiColon
    SemiColon
    InterfaceObjectDeclaration
      IdentifierList
        Identifier 'rst'
      Colon
      Keyword(In)
      SubtypeIndication
        Name
          NameDesignatorPrefix
            Identifier 'std_logic'
  RightPar
  SemiColon

== diagnostics ==
1:26 Expected([Token(Keyword(Signal)), Token(Keyword(Constant)), Token(Keyword(Variable)), Token(Identifier), Token(Keyword(File)), Token(Keyword(Type)), Token(Keyword(Function)), Token(Keyword(Procedure)), Token(Keyword(Impure)), Token(Keyword(Pure)), Token(Keyword(Package))])
