vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__interface_package_generic_map_default.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::interface_declaration,\n\"\\\npackage foo is new lib.pkg\n     generic map (default)\")"
---
InterfacePackageDeclaration
  InterfacePackageDeclarationPreamble
    Keyword(Package)
    Identifier 'foo'
    Keyword(Is)
  Keyword(New)
  Name
    Identifier 'lib'
    SelectedName
      Dot
      Identifier 'pkg'
  InterfacePackageGenericMapAspect
    Keyword(Generic)
    Keyword(Map)
    ParenthesizedInterfacePackageGenericMapAspectInner
      LeftPar
      InterfacePackageGenericMapAspectDefault
        Keyword(Default)
      RightPar
